# underflow

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: cargo-test.yml  clippy.yaml
underflow-ai/: Cargo.toml
underflow-ai/src/: heuristic.rs  lib.rs  util.rs
underflow-core/: Cargo.toml
underflow-core/src/: board.rs  history.rs  lib.rs  protocol.rs  server.rs  server_model.rs
underflow-l10n/: Cargo.toml
underflow-l10n/src/: global.rs  lib.rs  local.rs  macros.rs  tools.rs
underflow-main/: Cargo.toml
underflow-main/locales/en-US/: common.ftl
underflow-main/locales/ja-JP/: common.ftl
underflow-main/locales/zh-CN/: common.ftl
underflow-main/src/: colors.rs  config.rs  input.rs  main.rs  scenes.rs  tween.rs  ui.rs  utils.rs
underflow-main/src/components/: button.rs  data_bar.rs  mod.rs  popup_select.rs  rounded_rect.rs  single_choice.rs
underflow-main/src/scenes/: game.rs  mod.rs  pause.rs  preflight.rs  setting.rs  start.rs  startup.rs  win.rs
underflow-main/src/ui/: button.rs  shading.rs
