[workspace]
resolver = "2"
members = [ "underflow-ai","underflow-core", "underflow-main"]

[workspace.package]
# description = ""
edition = "2024"
# license = "MIT"
repository = "https://github.com/sjfhsjfh/underflow"
version = "0.0.2"

[workspace.dependencies]
anyhow = "1.0.97"
lyon = "1.0.1"
macroquad = "0.4.13"
nalgebra = "0.33.2"
once_cell = "1.21.1"
tokio = { version = "1.44.1", features = ["sync"]}
underflow-core = { path = "./underflow-core" }
