[workspace]
resolver = "2"
members = ["underflow-core", "underflow-main", "underflow-l10n", "underflow-ai"]

[workspace.package]
# description = ""
edition = "2024"
# license = "MIT"
repository = "https://github.com/sjfhsjfh/underflow"
version = "0.0.2"

[workspace.dependencies]
anyhow = "1.0.97"
comui = { git = "https://github.com/TeamFlos/comui", rev = "93265988f06e3edfae7763cef781e406f7dc2f98" }
fluent = "0.17.0"
fluent-syntax = "0.12.0"
lru = "0.14.0"
lyon = "1.0.1"
macroquad = "0.4.13"
nalgebra = "0.33.2"
once_cell = "1.21.1"
rand = "0.9.1"
tokio = { version = "1.44.1", features = ["sync"] }
underflow-ai = { path = "./underflow-ai" }
underflow-core = { path = "./underflow-core" }
underflow-l10n = { path = "./underflow-l10n" }
unic-langid = { version = "0.9.6", features = ["macros"] }
