[package]
name = "underflow-main"
# description.workspace = true
edition.workspace = true
# license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
comui.workspace = true
lyon = { workspace = true }
macroquad = { workspace = true }
nalgebra = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true }
underflow-core = { workspace = true }
